@@ -1,3 +1,8 @@
+2001-12-17  Alex Graveley  <alex@ximian.com>
+
+	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_init): Implement
+	a simple PRNG seed if needed. (Merge from soup-0-6)
+
 2001-12-09  Alex Graveley  <alex@ximian.com>
 
 	* src/libsoup/soup-uri.c (normalize_path): Add path normalization
